--- a/nginx/nginx.j2
+++ b/nginx/nginx.j2
@@ -24,7 +24,7 @@ http {
 
     server {
         listen {{ env.get("PORT_HTTPSD", "443") }} ssl;
-        server_name {{ env.get("WEB_SERVER_NAME", "localhost") }};
+        server_name {{ env.get("WEB_HOST", "localhost") }};
         root {{ env.get("SERVER_ROOT", "/srv/static") }};
         index index.html;
 
@@ -96,7 +96,7 @@ http {
         }
 
         location / {
-            proxy_pass http://{{ env.get("SERVER_NAME", "localhost") }}:{{ env.get("WEB_SERVER_PORT", "8000") }}/;
+            proxy_pass http://{{ env.get("SERVER_NAME", "localhost") }}:{{ env.get("SERVER_PORT", "8000") }}/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
