--- a/nginx/nginx.j2
+++ b/nginx/nginx.j2
@@ -1,4 +1,4 @@
-user {{ env.get("USER", "nobody") }};
+user {{ env.get("PROXY_USER", "nobody") }};
 worker_processes auto;
 error_log stderr info;
 pid {{ env.get("TEMP_DIR", "/tmp") }}/nginx.pid;
@@ -106,5 +106,12 @@ http {
 
         error_log {{ env.get("LOG_DIR", "/tmp/nginx") }}/nginx-error.log;
         access_log {{ env.get("LOG_DIR", "/tmp/nginx") }}/nginx-access.log;
+        proxy_temp_path {{ env.get("TEMP_DIR", "/tmp") }}/nginx/proxy_temp;
+        client_body_temp_path {{ env.get("TEMP_DIR", "/tmp") }}/nginx/client_temp;
+        fastcgi_temp_path {{ env.get("TEMP_DIR", "/tmp") }}/nginx/fastcgi_temp;
+        uwsgi_temp_path {{ env.get("TEMP_DIR", "/tmp") }}/nginx/uwsgi_temp;
+        scgi_temp_path {{ env.get("TEMP_DIR", "/tmp") }}/nginx/scgi_temp;
+
+
     }
 }
