--- a/nginx/nginx.j2
+++ b/nginx/nginx.j2
@@ -37,7 +37,7 @@ http {
         add_header Strict-Transport-Security "max-age=15552000; includeSubdomains;" always;
         add_header X-Frame-Options "SAMEORIGIN";
 
-        error_page 404 500 502 503 504 /outoforder.html;
+        error_page 400 404 500 502 503 504 /outoforder.html;
 
         location /static/ {
             alias {{ env.get("SERVER_ROOT", "/srv/static") }}/;
