--- a/nginx/nginx.j2
+++ b/nginx/nginx.j2
@@ -23,7 +23,8 @@ http {
     }
 
     server {
-        listen {{ env.get("PORT_HTTPSD", "443") }} ssl;
+        listen {{ env.get("PORT_HTTPSD", "443") }} ssl http2;
+        listen [::]{{ env.get("PORT_HTTPSD", "443") }} ssl http2;
         server_name {{ env.get("WEB_HOST", "localhost") }};
         root {{ env.get("SERVER_ROOT", "/srv/static") }};
         index index.html;
