--- a/nginx/nginx.j2
+++ b/nginx/nginx.j2
@@ -24,7 +24,7 @@ http {
 
     server {
         listen {{ env.get("PORT_HTTPSD", "443") }} ssl;
-        listen [::]{{ env.get("PORT_HTTPSD", "443") }} ssl;
+        listen [::]:{{ env.get("PORT_HTTPSD", "443") }} ssl;
         http2 on;
         server_name {{ env.get("WEB_HOST", "localhost") }};
         root {{ env.get("SERVER_ROOT", "/srv/static") }};
